--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.youtopin</groupId>
     <artifactId>zarinpal-java-client</artifactId>
-    <version>1.0.8-SNAPSHOT</version>
+    <version>1.0.0-RELEASE</version>
 
     <properties>
         <maven.compiler.target>1.8</maven.compiler.target>
